--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   http: ^1.1.2
   bloc: ^8.1.2
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
